# BaseFilesBackend

./: .gitignore
frondend/: package-lock.json  package.json
frondend/app/: globals.css  page.tsx
frondend/app/home/: page.tsx
frondend/components/: home-page.tsx  login-form.tsx
frondend/store/: userStore.tsx
server/: Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
server/db/: __init__.py  dbengine.py  dbmigrations.py  dbschema.py
server/models/: __init__.py  verficationpydantic.py
server/routers/: goolge_auth.py  normal_auth.py
server/routers/auth_router/: __init__.py  auth_services.py  goolge_auth.py  normal_auth.py
server/services/: db_services.py
